# monitor-bot

./: .commit_msg.txt  .commitmsg  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  cloudbuild.yaml  config.italia.toml  config.test.toml  config.toml  pyproject.toml
docs/: DOCUMENTAZIONE_FUNZIONALE.md  DOCUMENTAZIONE_TECNICA.md  multi-user-rollout.md
frontend/: admin.html  chatbot.html  configurazioni.html  dettaglio.html  esecuzioni.html  esegui.html  index.html  login.html  package-lock.json  package.json  storico.html  tailwind.config.js  vite.config.js
frontend/src/: api.js  main.js  style.css
frontend/src/components/: admin.js  agenda.js  chatbot.js  config.js  dashboard.js  detail.js  esecuzioni.js  helpers.js  history.js  pipeline.js  toast.js
infra/: apis.tf  artifact_registry.tf  cloudbuild.tf  cloudrun_job.tf  cloudrun_service.tf  database.tf  iam.tf  main.tf  networking.tf  outputs.tf  scheduler.tf  secrets.tf  storage.tf  terraform.tfvars  tfplan  variables.tf
src/monitor_bot/: __init__.py  app.py  auth.py  classifier.py  config.py  database.py  date_enricher.py  db_models.py  genai_client.py  job.py  main.py  models.py  notifier.py  persistence.py  pipeline.py  progress.py  schemas.py  seed.py
src/monitor_bot/collectors/: __init__.py  anac.py  base.py  events.py  ted.py  web_events.py  web_search.py  web_tenders.py
src/monitor_bot/routes/: api_admin.py  api_agenda.py  api_auth.py  api_chat.py  api_dashboard.py  api_queries.py  (+5 more)
static/css/: app.css
static/js/: app.js
templates/: 404.html  base.html  dashboard.html  history.html  queries.html  report.html  run.html  run_detail.html  sources.html
templates/partials/: navbar.html
tests/: test_multi_user_services.py
(+8 files in other folders)
