[project]
name = "monitor-bot"
version = "0.1.0"
description = "POC: Monitor public tenders and events relevant to an IT company"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "google-genai>=1.51",
    "jinja2>=3.1",
    "python-dotenv>=1.1",
    "feedparser>=6.0.12",
    "beautifulsoup4>=4.12",
]

[project.scripts]
monitor-bot = "monitor_bot.main:cli"

[dependency-groups]
dev = [
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/monitor_bot"]

[tool.ruff]
src = ["src"]
line-length = 100
