[project]
name = "monitor-bot"
version = "0.2.0"
description = "Enterprise web app for monitoring public tenders, events and funding opportunities"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "google-genai>=1.51",
    "google-auth>=2.0",
    "jinja2>=3.1",
    "python-dotenv>=1.1",
    "feedparser>=6.0.12",
    "beautifulsoup4>=4.12",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "aiosqlite>=0.21",
    "python-multipart>=0.0.18",
]

[project.scripts]
monitor-bot = "monitor_bot.main:cli"
monitor-web = "monitor_bot.app:main"
monitor-job = "monitor_bot.job:main"

[dependency-groups]
dev = [
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/monitor_bot"]

[tool.ruff]
src = ["src"]
line-length = 100
